# mcp-sec

./: .gitignore  CHANGELOG.md  CHANGELOG_zh-CN.md  Chinese-A-share-MCP-README.md  Chinese-A-share-MCP-README_zh-CN.md  LICENSE  README.md  README_zh.md  VERSION_TRACKING.md  glama.json  pyproject.toml  smithery.yaml
src/mcp_sec/: __init__.py  config.py  instances.py  models.py  response.py  server.py
src/mcp_sec/services/: downloader.py  parser.py  searcher.py
src/mcp_sec/tools/: download.py  list_filings.py  lookup.py  page.py  parse.py  search.py  toc.py
